feat: Add Sunan Abu Dawood and Sunan Nisai pages with book download functionality
- Implemented Sunan Abu Dawood page with a banner, book cards, and download dialog.
- Added Sunan Nisai page with similar structure and functionality.
- Created reusable components for book cards and download dialogs with captcha verification.
- Introduced navigation sidebar for easy access to different sections.
- Enhanced UI with collapsible sections for better organization of links.
- Added loading skeletons for improved user experience during data fetching.

--- a/public/locales/ar.json
+++ b/public/locales/ar.json
@@ -11,11 +11,17 @@
         "makkahTv": "تلفزيون مكة",
         "madinaTv": "تلفزيون المدينة المنورة",
         "ramadan": "تقويم رمضان",
-        "namesallah":"99 اسمًا من أسماء الله الحسنى",
-        "forum":"المنتدى",
-        "calender":"التقويم",
-        "livetv":"البث التلفزيوني المباشر",
-        "blogs":"المدونات"
+        "namesallah": "99 اسمًا من أسماء الله الحسنى",
+        "forum": "المنتدى",
+        "calender": "التقويم",
+        "livetv": "البث التلفزيوني المباشر",
+        "hadees": "حديث",
+        "sahihbukhari": "صحيح البخاري",
+        "sahihmuslim": "صحيح مسلم",
+        "jamiatirmazi": "جامع الترمذي",
+        "sunanabudawood": "سنن أبي داود",
+        "sunannisai": "سنن النسائي",
+        "blogs": "المدونات"
     },
     "banner": {
         "title": "مرحبًا بكم في جلوبال صلاح",
@@ -562,8 +568,6 @@
             }
         ]
     },
-
-
     "aboutus": {
         "title": "نبذة عنا",
         "desc": "تأسست شركة صلاح العالمية على يد فريق مسلم ومتفاني في تقديم المعلومات الإسلامية الدقيقة لعملائها. يضم فريقنا خبراء ومفتيين وحفاظ قرآن، يعملون معًا بتفانٍ لتقديم معلومات موثوقة.",
@@ -592,15 +596,11 @@
         "quranrecitationtitle": "تلاوة القرآن",
         "quranrecitationdesc": "استمع إلى تلاوات القرآن الجميلة"
     },
-
-
     "countrieslist": {
         "title": "البلد",
         "desc": "اكتشف مواقيت الصلاة الدقيقة للبلدان في جميع أنحاء العالم.",
         "placeholder": "...ابحث عن بلد"
     },
-
-
     "contact": {
         "title": "اتصل بنا",
         "desc": "تواصل مع جلوبال صلاح. نحن هنا للإجابة على أسئلتك والاستماع إلى ملاحظاتك.",
@@ -615,8 +615,6 @@
         "infotitle": "معلومات الاتصال",
         "infophone": "الهاتف"
     },
-
-
     "terms": {
         "title": "الشروط والأحكام",
         "lastupdated": "آخر تحديث 18 مارس 2025",
@@ -632,7 +630,6 @@
         "subparagraph_5": " مرحباً بكم في موقع الصلاة العالمي! يوفر موقعنا تحديثات دقيقة فيما يتعلق بمواقيت الصلاة الإسلامية والأحاديث النبوية والآيات والأدعية وغيرها من المعلومات الإسلامية. لقد ساعدنا العديد من المسلمين على مستوى العالم للبقاء على اتصال بممارساتهم الإسلامية في الوقت المحدد. يمكنك الوصول بسلاسة إلى تحديثات الصلاة العالمية من أي مكان.",
         "footertext": "إذا كانت لديك أي أسئلة حول هذه الشروط والأحكام، يُرجى الاتصال بنا."
     },
-
     "privacy": {
         "title": "سياسة الخصوصية",
         "subheading_1": "المعلومات المكتسبة",
@@ -650,8 +647,6 @@
         "subheading_7": "اتصل بنا ",
         "subparagraph_7": "إذا كانت لديك استفسارات بخصوص أي شيء، فنحن هنا للرد عليك. يمكنك الاتصال بنا عبر البريد الإلكتروني على support@globalsalah.com."
     },
-
-
     "country": {
         "title": "مواقيت الصلاة للمدن في",
         "subheading_1": "اكتشف",
@@ -665,8 +660,6 @@
         "subheading_5": "أسلوب حياة مريح",
         "subparagraph_5": "اعتمد وتيرة الحياة الهادئة حيث تحدد البساطة والتوازن الحياة اليومية. من المناظر الطبيعية الخلابة إلى الشعور القوي بالمجتمع، استمتع بجو خالي من التوتر يشجع على الاسترخاء والتواصل والرفاهية."
     },
-
-
     "city": {
         "school": "اختر مدرسة فكرية مختارة",
         "hanafi": "حنفي",
@@ -676,8 +669,6 @@
         "monthlytitle": "أوقات الصلاة الشهرية",
         "selecttimezone": "اختر المنطقة الزمنية"
     },
-
-
     "thankyou": {
         "badge-text": "شكراً لتواصلك معنا!",
         "heading": "نحن نقدر رسالتك",
@@ -686,8 +677,6 @@
         "sub-paragraph": "لا تتردد في إرسال بريد إلكتروني إلينا وسنرد عليك في أسرع وقت ممكن.",
         "buttontext": "راسلنا على"
     },
-
-
     "makkahtv": {
         "mainheading": "تلفزيون مكة",
         "mainparagraph": "اختبر رحلة روحانية مع البث المباشر من الحرم المكي الشريف - شاهده في الوقت الفعلي واشعر بالتواصل.",
@@ -696,8 +685,6 @@
         "subparagraph": "يوفر هذا البث المباشر على مدار الساعة وطوال أيام الأسبوع للمشاهدين في جميع أنحاء العالم اتصالاً بالمسجد الحرام في مكة المكرمة، واستمتع بالأجواء الروحانية لأقدس موقع في الإسلام، وشاهد الطواف حول الكعبة، وانضم إلى الصلاة من أي مكان في العالم.",
         "footertext": "يتم توفير هذا التيار لأغراض تعليمية وروحية."
     },
-
-
     "madinatv": {
         "mainheading": "تلفزيون المدينة المنورة",
         "mainparagraph": "استمتع برحلة روحانية مع البث المباشر من المسجد النبوي الشريف - شاهده في الوقت الفعلي واشعر بالتواصل.",
@@ -706,22 +693,43 @@
         "subparagraph": "يربط هذا البث المباشر على مدار الساعة وطوال أيام الأسبوع المشاهدين في جميع أنحاء العالم بالمسجد النبوي في المدينة المنورة. انغمس في الأجواء الهادئة لثاني أقدس موقع في الإسلام، واشهد الصلوات واختبر السكينة الروحانية من أي مكان في العالم.",
         "footertext": "يتم تقديم هذا المسار للتعلم والإثراء الروحي."
     },
-
-    "ramadanpage":{
-        "hijri":"١٤٤٦ هجري",
-        "heading":"تقويم رمضان ٢٠٢٥",
-        "suhoor":"السحور (الفجر)",
-        "iftar":"الإفطار (المغرب)",
-        "suhoorends":"انتهاء السحور",
-        "iftartime":"وقت الإفطار",
-        "footertext":"ينتهي السحور في وقت الفجر - يبدأ الإفطار في وقت المغرب"
-      },
-
-
-      "namesofallah":{
-        "heading":"أسماء الله الحسنى ال 99",
-        "paragraph":"أسماء الله الحسنى - أسماء الله الحسنى مع المعاني واللفظ",
-        "subparagraph":" تعكس أسماء الله الحسنى الـ 99 رحمته وحكمته وعظمته. يحمل كل اسم منها معنى خاصًا، ويوجه المؤمنين نحو الإيمان والسلام الداخلي."
-      }
-
+    "ramadanpage": {
+        "hijri": "١٤٤٦ هجري",
+        "heading": "تقويم رمضان ٢٠٢٥",
+        "suhoor": "السحور (الفجر)",
+        "iftar": "الإفطار (المغرب)",
+        "suhoorends": "انتهاء السحور",
+        "iftartime": "وقت الإفطار",
+        "footertext": "ينتهي السحور في وقت الفجر - يبدأ الإفطار في وقت المغرب"
+    },
+    "namesofallah": {
+        "heading": "أسماء الله الحسنى ال 99",
+        "paragraph": "أسماء الله الحسنى - أسماء الله الحسنى مع المعاني واللفظ",
+        "subparagraph": " تعكس أسماء الله الحسنى الـ 99 رحمته وحكمته وعظمته. يحمل كل اسم منها معنى خاصًا، ويوجه المؤمنين نحو الإيمان والسلام الداخلي."
+    },
+    "bukharipage": {
+        "title": "صحيح البخاري",
+        "desc": "أصح كتاب حديث جمعه الإمام محمد البخاري",
+        "heading-2": "مجموعة صحيح البخاري"
+    },
+    "muslimpage": {
+        "title": "صحيح مسلم",
+        "desc": "أصح كتاب حديث جمعه الإمام مسلم بن الحجاج",
+        "heading-2": "مجموعة صحيح مسلم"
+    },
+    "jamiapage": {
+        "title": "جامع الترمذي",
+        "desc": "مجموعة حديث مشهورة جمعها الإمام أبو عيسى الترمذي",
+        "heading-2": "مجموعة جامع الترمذي"
+    },
+    "sunanpage": {
+        "title": "سنن أبي داود",
+        "desc": "مجموعة حديث مشهورة جمعها الإمام أبو داود",
+        "heading-2": "مجموعة سنن أبي داود"
+    },
+    "nisaipage": {
+        "title": "سنن النسائي",
+        "desc": "مجموعة حديث مشهورة جمعها الإمام النسائي",
+        "heading-2": "مجموعة سنن النسائي"
+    }
 }
